# textgridaf

./: LICENSE  README.md  dune-project  textgridaf.opam
lib/: dune  element.ml  element_intf.ml  parser.ml  serializer.ml  textgrid.ml  textgridaf.ml  tier.ml
test/: dune  parser.ml  serializer.ml
test/fixtures/: 0-full-ascii  0-reference.json  0-short-ascii  1-full-utf16be  1-full-utf16le  1-full-utf8  1-reference.json
